bin/testsuite/tests/compiler/src/errors/compiler5008.swg
#global testerror "Err0618"
#test
{
    @init(1.0, 2)
}
